[gd_scene load_steps=2 format=3 uid="uid://ds4eh4fr4oljc"]

[ext_resource type="Script" path="res://Code/Levels/SpawnZone.gd" id="1_wy03w"]

[node name="SpawnZone" type="Node3D" groups=["SpawnZones"]]
script = ExtResource("1_wy03w")

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
